<?xml version="1.0"?>
<package>
  <name>loomo_ros_bridge</name>
  <version>0.3.3</version>
  <description>
    Consume Loomo data in ROS.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="damonkohler@google.com">Damon Kohler</maintainer>
  <author email="damonkohler@google.com">Damon Kohler</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>android_core</build_depend>
  <build_depend>android_extras</build_depend>
  <build_depend>android_remocons</build_depend>
  <build_depend>rosjava_messages</build_depend>
</package>
